# gddynu

./: .gitignore  CLAUDE.md  Dockerfile  README.md  config.example.json  config.example.toml  docker-compose.yml  pyproject.toml
src/gddynu/: __init__.py  __main__.py  cli.py  config.py  daemon.py  dynu.py  ipdetect.py  iplog.py  runner.py  state.py  webserver.py
tests/: test_config.py  test_dynu.py  test_ipdetect.py  test_runner.py  test_state.py
